[package]
name = "uefi-test"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
libm = "0.2.15"
rusttype = { version = "0.9.3", default-features = false, features = ["libm-math"] }
uefi-graphics2 = "0.5.0"

[dependencies.uefi]
version = "0.35.0"
features = ["alloc", "global_allocator", "logger"]
